--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,7 @@
                 <a href="#">Laptops</a>
               </li>
               <li>
-                <a [routerLink]="['/products']" href=""> Products</a>
+                <a [routerLink]="['/products']" href=""> All Products</a>
               </li>
             </ul>
           </ng-sidebar>
