--- a/src/app/components/products/product-list.component.html
+++ b/src/app/components/products/product-list.component.html
@@ -1,5 +1,5 @@
 <article>
-    <h4> Product Available </h4>
+    <h4> Products Available </h4>
 
     <div class="row">
         <div *ngFor="let product of products | async">
@@ -9,7 +9,8 @@
                 <div class="card-body">
                   <h6 class="card-title">{{ product.productName }} </h6>
                   <p class="card-text" style="font-size:12px">${{ product.price }}</p>
-                  <button type="button" class="btn btn-primary" (click)="addProductToCart(product)">Add To Cart</button>
+                  <button type="button" class="btn btn-primary" (click)="addProductToCart(product)" style="font-size:12px;margin-bottom:3px">Add To Cart</button><br/>
+                  <button type="button" class="btn btn-primary" (click)="removeProductFromCart(product)" style="font-size:12px">Remove From Cart</button>
                 </div>
             </div>
         </div>
