--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -19,5 +19,7 @@
   </tbody>
 </table>
   <p>Total Price: {{totalPrice()}}</p>
-
+  
+<a href="email">
   <button type="button" class="btn btn-primary"> Send Email </button>
+</a>
