--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,25 +1,8 @@
-<div>
-  <h4>Shopping Cart</h4>
-  <img src="../../../assets/img/shopping-cart.png" style="width:150px">
-  <hr/>
-  <div class="cart"  style="width:150px">
-    <div class="panel panel-default">
-      <div class="panel-body">
-          <div class="alert alert-info" *ngIf="productsInCart.length==0">Cart is empty</div>
-          <div class="alert alert-info" *ngIf="productsInCart.length>0" style="font-size:12px"> {{productsInCart.length}} items in the cart</div>
-        <div class="cart-body">
-          <div class="cart-item" *ngFor="let product of productsInCart">
-            <div style="display: inline">
-              {{product.productName}}: ${{product.price}}
-            </div>
-          </div>
-        </div>
-      </div>
+<div class="cart">
+  <div class="thumbnail text-center">
+    <img src="../../../assets/img/shopping-cart.png" alt="" style="width:50px">
+    <div class="caption">
+      <p>{{productsInCart.length}}</p>
     </div>
-  </div>
-  <div>
-    <a href="checkout">
-     <button type="button" class="btn btn-warning" style="font-size:12px;float:right">Checkout</button>
-  </a>
   </div>
 </div>
