--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,65 +1,5 @@
-<div style="margin:40 0;background-color:lavender;">
-  <div>
-    <app-header></app-header>
-  </div>
-
-  <div class="container" style="margin-bottom: 20px">
-    <div ng2-carouselamos [width]="900" [items]="items" [$item]="itemTemplate" [$prev]="prevTemplate" [$next]="nextTemplate"
-      (onSelectedItem)="selectedItem = $event.item; selectedIndex = $event.index"></div>
-
-    <ng-template #prevTemplate>
-      <img width="50px" src="../../../assets/img/prev.png">
-    </ng-template>
-
-    <ng-template #nextTemplate>
-      <img width="50px" src="../../../assets/img/next.png">
-    </ng-template>
-
-    <ng-template let-item let-i="index" #itemTemplate>
-      <div style="min-width: 500px">
-        <div *ngIf="i === selectedIndex">
-          <img width="900px" src="{{ item.name }}">
-        </div>
-      </div>
-    </ng-template>
-  </div>
-
-  <div class="container">
-    <div class="row">
-      <!-- Container for sidebar(s) + page content -->
-      <div class="col-sm-2">
-        <ng-sidebar-container style="height: 200vh;">
-          <!-- A sidebar -->
-          <ng-sidebar [(opened)]="_opened" position="fixed">
-            <h4>Category</h4>
-            <ul>
-              <li>
-                <a href="#">Clothings</a>
-              </li>
-              <li>
-                <a href="#">Shoes</a>
-              </li>
-              <li>
-                <a href="#">Sports</a>
-              </li>
-              <li>
-                <a href="#">Laptops</a>
-              </li>
-              <li>
-                <a [routerLink]="['/products']" href=""> All Products</a>
-              </li>
-            </ul>
-          </ng-sidebar>
-        </ng-sidebar-container>
-      </div>
-      <div class="col-sm-8">
-        <router-outlet></router-outlet>
-      </div>
-
-      <div class="col-sm-2">
-        <app-cart></app-cart>
-      </div>
-   
-    </div>
-  </div>
-</div>
+<app-header></app-header>
+<section style="background-color:lavender; color:grey">
+  <router-outlet></router-outlet>
+</section>
+<app-footer></app-footer>
