--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -1,25 +1,34 @@
-<h5>Product Available for checkout</h5>
+<div style="margin-left:400px;margin-right:400px">
+  <br><br>
+  <h5>Confirm to checkout:</h5>
 
-<table class="table table-bordered">
-  <thead style="background-color:#17a2b8;color:white;font-size: 14px;font-weight: normal !important">
-    <tr>
-      <th>SNo</th>
-      <th>Product Name</th>
-      <th>Price</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let product of productsInCart;let i=index">
-      <td>{{i+1}}</td>
-      <td>{{product.productName}}
-        <img style="height: 100px;" src="{{product.imageUrl}}" alt="" />
-      </td>
-      <td>{{product.price}}</td>
-    </tr>
-  </tbody>
-</table>
-  <p>Total Price: {{totalPrice()}}</p>
-  
-<a href="email">
-  <button type="button" class="btn btn-primary"> Send Email </button>
-</a>
+  <table class="table table-bordered">
+    <thead style="background-color:#17a2b8;color:white;font-size: 14px;font-weight: normal !important">
+      <tr>
+        <th>SNo</th>
+        <th>Product Name</th>
+        <th>Product Image</th>
+        <th>Price</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let product of productsInCart;let i=index">
+        <td>{{i+1}}</td>
+        <td>{{product.productName}}</td>
+        <td>
+          <img style="height: 100px;" src="{{product.imageUrl}}" alt="" />
+        </td>
+        <td>{{product.price}}</td>
+      </tr>
+    </tbody>
+  </table>
+  <p>Total Price: ${{totalPrice()}}</p>
+
+  <br/>
+  <a href="products" style="margin-left:150px;margin-right:10px">
+      <button type="button" class="btn btn-primary"> Back </button>
+  </a>
+  <a href="email">
+    <button type="button" class="btn btn-primary"> Checkout </button>
+  </a>
+</div>
