--- a/src/app/components/email/email.component.html
+++ b/src/app/components/email/email.component.html
@@ -1,24 +1,24 @@
 <div class="center-div">
   <div class="panel panel-primary">
-    <div class="panel-heading">
-      <h3 class="panel-title">Please sign in</h3>
-    </div>
     <div class="panel-body">
+      <br><br><br>
       <form>
         <div class="form-group">
-          <label for="inputEmail" class="control-label">Email id</label>
-          <input type="text" class="form-control" id="inputEmail" name="userName" placeholder="Email Id" [(ngModel)]="emailAccount.userName">
+          <label for="inputEmail" class="control-label"><h6 style="color:red">Please input your email address, and press "Confirm" to finish checkout</h6></label>
+          <input type="text" class="form-control" id="inputEmail" name="userName" placeholder="Email Address" [(ngModel)]="emailAccount.userName">
         </div>
-        <!--
-        <div class="form-group">
-          <label for="inputPassword" class="control-label">Password</label>
-          <input type="password" class="form-control" id="inputPassword" placeholder="password" [(ngModel)]="emailAccount.password">
-        </div>
-        -->
-        <div class="form-group">
-          <button type="button" class="btn btn-raised btn-primary" (click)="sendEmail()">Send</button>
+        <div class="form-group" style="margin-left: 100px;">
+          <a href="products" style="margin-right:15px">
+            <button type="button" class="btn btn-raised btn-primary" (click)="sendEmail()">No Thanks</button>
+          </a>
+          <button type="button" class="btn btn-raised btn-primary" (click)="sendEmail()">Confirm</button>
         </div>
       </form>
     </div>
   </div>
+
+  <span id="message">
+    <p> {{message}}</p>
+  </span>
+  <button type="button" class="btn btn-raised btn-primary" style="float:right" (click)="backToHome()">Back To Home</button>
 </div>
