--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<section style="background-color:lavender; color:grey">
+<section style="background-color:lavender; color:grey; min-height: 100%">
   <router-outlet></router-outlet>
-</section>
 <app-footer></app-footer>
+</section>
