--- a/src/app/components/email/email.component.html
+++ b/src/app/components/email/email.component.html
@@ -1,24 +1,22 @@
-<div class="center-div">
+<div class="container">
   <div class="panel panel-primary">
     <div class="panel-body">
       <br><br><br>
       <form>
         <div class="form-group">
-          <label for="inputEmail" class="control-label"><h6 style="color:red">Please input your email address, and press "Confirm" to finish checkout</h6></label>
+          <label for="inputEmail" class="control-label"><h6 style="color:red">{{message}}</h6></label>
           <input type="text" class="form-control" id="inputEmail" name="userName" placeholder="Email Address" [(ngModel)]="emailAccount.userName">
         </div>
         <div class="form-group" style="margin-left: 100px;">
           <a href="products" style="margin-right:15px">
-            <button type="button" class="btn btn-raised btn-primary" (click)="sendEmail()">No Thanks</button>
+            <button type="button" class="btn btn-raised btn-primary" (click)="backToHome()">No Thanks</button>
           </a>
           <button type="button" class="btn btn-raised btn-primary" (click)="sendEmail()">Confirm</button>
         </div>
       </form>
+      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </div>
   </div>
 
-  <span id="message">
-    <p> {{message}}</p>
-  </span>
-  <button type="button" class="btn btn-raised btn-primary" style="float:right" (click)="backToHome()">Back To Home</button>
+  <!--<button type="button" class="btn btn-raised btn-primary" style="float:right" (click)="backToHome()">Back To Home</button>-->
 </div>
