--- a/src/app/components/products/product-list.component.html
+++ b/src/app/components/products/product-list.component.html
@@ -1,7 +1,7 @@
 <article class="container">
     <div class="row">
         <div class="col-sm-2">
-            <app-sidebar></app-sidebar>
+            <app-sidebar (onPriceSearch)="onPriceSearchHandler($event)"></app-sidebar>
         </div>
 
         <div class="col-sm-10">
